--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweet Delights - Sign In</title>
+    <title>Sips & Bites - Sign In</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -23,8 +23,8 @@
         <div class="auth-card">
             <div class="auth-header">
                 <div class="brand-logo">
-                    <i class="fas fa-birthday-cake"></i>
-                    <h1>Sweet Delights</h1>
+                    <i class="fas fa-coffee"></i>
+                    <h1>Sips & Bites</h1>
                 </div>
                 <p class="auth-subtitle">Welcome back to your favorite bakery</p>
             </div>
