--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-lg-6 animate-fade-left">
                     <div class="page-header-image">
-                        <img src="https://images.pexels.com/photos/1775043/pexels-photo-1775043.jpeg?auto=compress&cs=tinysrgb&w=600" alt="About Us" class="img-fluid">
+                        <img src="images/photo1.jpeg" alt="About Us" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 animate-fade-right">
                     <div class="story-image">
-                        <img src="https://images.pexels.com/photos/1126359/pexels-photo-1126359.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Our Story" class="img-fluid rounded shadow-lg">
+                        <img src="images/Bakery-Story.jpeg" alt="Our Story" class="img-fluid rounded shadow-lg">
                         <div class="story-badge">
                             <i class="fas fa-heart"></i>
                             <span>Est. 2025</span>
@@ -182,7 +182,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-4 text-center mb-4 mb-lg-0">
                                 <div class="team-image-container">
-                                    <img src="https://images.pexels.com/photos/3756679/pexels-photo-3756679.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Mariam Ehab" class="team-profile-image">
+                                    <img src="images/Mariam-Ehab.jpg" alt="Mariam Ehab">
                                     <div class="team-badge">
                                         <i class="fas fa-code"></i>
                                         Developer
@@ -205,14 +205,11 @@
                                     <span class="skill-tag">Digital Strategy</span>
                                 </div>
                                 <div class="team-social">
-                                    <a href="#" class="social-link" title="LinkedIn">
+                                    <a href="https://www.linkedin.com/in/mariamehab1305" class="social-link" title="LinkedIn">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
-                                    <a href="#" class="social-link" title="GitHub">
+                                    <a href="https://github.com/Marria-m" class="social-link" title="GitHub">
                                         <i class="fab fa-github"></i>
-                                    </a>
-                                    <a href="#" class="social-link" title="Instagram">
-                                        <i class="fab fa-instagram"></i>
                                     </a>
                                     <a href="mailto:mariamehab135721@gmail.com" class="social-link" title="Email">
                                         <i class="fas fa-envelope"></i>
@@ -329,10 +326,15 @@
                         </h4>
                         <p>Your neighborhood café bringing you the finest baked goods and beverages since 2025.</p>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.linkedin.com/in/mariamehab1305" class="social-link" title="LinkedIn">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/Marria-m" class="social-link" title="GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="mailto:mariamehab135721@gmail.com" class="social-link" title="Email">
+                                <i class="fas fa-envelope"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -351,10 +353,10 @@
                     <div class="footer-links">
                         <h5>Categories</h5>
                         <ul>
-                            <li><a href="#">Breads</a></li>
-                            <li><a href="#">Pastries</a></li>
-                            <li><a href="#">Cakes</a></li>
-                            <li><a href="#">Beverages</a></li>
+                            <li><a href="products.html">Breads</a></li>
+                            <li><a href="products.html">Pastries</a></li>
+                            <li><a href="products.html">Cakes</a></li>
+                            <li><a href="products.html">Beverages</a></li>
                         </ul>
                     </div>
                 </div>
