--- a/cart.html
+++ b/cart.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-lg-6 animate-fade-left">
                     <div class="page-header-image">
-                        <img src="https://images.pexels.com/photos/1775043/pexels-photo-1775043.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Shopping Cart" class="img-fluid">
+                        <img src="images/photo1.jpeg" alt="Shopping Cart" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                             <div class="card-body p-4">
                                 <div class="summary-row">
                                     <span>Subtotal:</span>
-                                    <span id="subtotal">$0.00</span>
+                                    <span id="subtotal">EGP 0.00</span>
                                 </div>
                                 <div class="summary-row">
                                     <span>Delivery:</span>
@@ -124,12 +124,12 @@
                                 </div>
                                 <div class="summary-row">
                                     <span>Tax (8%):</span>
-                                    <span id="tax">$0.00</span>
+                                    <span id="tax">EGP 0.00</span>
                                 </div>
                                 <hr class="my-3">
                                 <div class="summary-row total-row">
                                     <span class="fw-bold">Total:</span>
-                                    <span id="total" class="fw-bold text-gradient">$0.00</span>
+                                    <span id="total" class="fw-bold text-gradient">EGP 0.00</span>
                                 </div>
                                 
                                 <div class="d-grid mt-4">
@@ -208,10 +208,15 @@
                         </h4>
                         <p>Your neighborhood café bringing you the finest baked goods and beverages since 2025.</p>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.linkedin.com/in/mariamehab1305" class="social-link" title="LinkedIn">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/Marria-m" class="social-link" title="GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="mailto:mariamehab135721@gmail.com" class="social-link" title="Email">
+                                <i class="fas fa-envelope"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -230,10 +235,10 @@
                     <div class="footer-links">
                         <h5>Categories</h5>
                         <ul>
-                            <li><a href="#">Breads</a></li>
-                            <li><a href="#">Pastries</a></li>
-                            <li><a href="#">Cakes</a></li>
-                            <li><a href="#">Beverages</a></li>
+                            <li><a href="products.html">Breads</a></li>
+                            <li><a href="products.html">Pastries</a></li>
+                            <li><a href="products.html">Cakes</a></li>
+                            <li><a href="products.html">Beverages</a></li>
                         </ul>
                     </div>
                 </div>
