--- a/add-product.html
+++ b/add-product.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-lg-6 animate-fade-left">
                     <div class="page-header-image">
-                        <img src="https://images.pexels.com/photos/1126359/pexels-photo-1126359.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Add Product" class="img-fluid">
+                        <img src="images/photo1.jpeg" alt="Add Product" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -119,11 +119,11 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="productPrice" class="form-label">
-                                                <i class="fas fa-dollar-sign"></i>
+                                                <i class="fas fa-coins"></i>
                                                 Price
                                             </label>
                                             <div class="input-group">
-                                                <span class="input-group-text">$</span>
+                                                <span class="input-group-text">EGP</span>
                                                 <input type="number" class="form-control" id="productPrice" 
                                                        placeholder="0.00" step="0.01" min="0" required>
                                             </div>
@@ -250,10 +250,15 @@
                         </h4>
                         <p>Your neighborhood café bringing you the finest baked goods and beverages since 2025.</p>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.linkedin.com/in/mariamehab1305" class="social-link" title="LinkedIn">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/Marria-m" class="social-link" title="GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="mailto:mariamehab135721@gmail.com" class="social-link" title="Email">
+                                <i class="fas fa-envelope"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -272,10 +277,10 @@
                     <div class="footer-links">
                         <h5>Categories</h5>
                         <ul>
-                            <li><a href="#">Breads</a></li>
-                            <li><a href="#">Pastries</a></li>
-                            <li><a href="#">Cakes</a></li>
-                            <li><a href="#">Beverages</a></li>
+                            <li><a href="products.html">Breads</a></li>
+                            <li><a href="products.html">Pastries</a></li>
+                            <li><a href="products.html">Cakes</a></li>
+                            <li><a href="products.html">Beverages</a></li>
                         </ul>
                     </div>
                 </div>
