--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
                                 </div>
                                 <div class="col-lg-6 animate-fade-left">
                                     <div class="hero-image">
-                                        <img src="https://images.pexels.com/photos/1775043/pexels-photo-1775043.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Fresh Bakery" class="img-fluid">
+                                        <img src="images/photo1.jpeg" alt="Fresh Bakery" class="img-fluid">
                                         <div class="floating-badge">
                                             <i class="fas fa-award"></i>
                                             <span>Premium Quality</span>
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="col-lg-6 animate-fade-left">
                                     <div class="hero-image">
-                                        <img src="https://images.pexels.com/photos/302899/pexels-photo-302899.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Premium Coffee" class="img-fluid">
+                                        <img src="images/photo2.jpeg" alt="Premium Coffee" class="img-fluid">
                                         <div class="floating-badge">
                                             <i class="fas fa-coffee"></i>
                                             <span>Fresh Roasted</span>
@@ -145,7 +145,7 @@
                                 </div>
                                 <div class="col-lg-6 animate-fade-left">
                                     <div class="hero-image">
-                                        <img src="https://images.pexels.com/photos/1126359/pexels-photo-1126359.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Artisan Pastries" class="img-fluid">
+                                        <img src="images/photo3.jpeg" alt="Artisan Pastries" class="img-fluid">
                                         <div class="floating-badge">
                                             <i class="fas fa-heart"></i>
                                             <span>Made with Love</span>
@@ -292,10 +292,15 @@
                         </h4>
                         <p>Your neighborhood café bringing you the finest baked goods and beverages since 2025.</p>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.linkedin.com/in/mariamehab1305" class="social-link" title="LinkedIn">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/Marria-m" class="social-link" title="GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="mailto:mariamehab135721@gmail.com" class="social-link" title="Email">
+                                <i class="fas fa-envelope"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -314,10 +319,10 @@
                     <div class="footer-links">
                         <h5>Categories</h5>
                         <ul>
-                            <li><a href="#">Breads</a></li>
-                            <li><a href="#">Pastries</a></li>
-                            <li><a href="#">Cakes</a></li>
-                            <li><a href="#">Beverages</a></li>
+                            <li><a href="products.html">Breads</a></li>
+                            <li><a href="products.html">Pastries</a></li>
+                            <li><a href="products.html">Cakes</a></li>
+                            <li><a href="products.html">Beverages</a></li>
                         </ul>
                     </div>
                 </div>
