--- a/about.html
+++ b/about.html
@@ -4,22 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sips & Bites - About Us</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/about-animations.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="home.html">
@@ -62,7 +55,6 @@
         </div>
     </nav>
 
-    <!-- Page Header -->
     <section class="page-header">
         <div class="container">
             <div class="row align-items-center">
@@ -79,7 +71,6 @@
         </div>
     </section>
 
-    <!-- Our Story Section -->
     <section class="py-5">
         <div class="container">
             <div class="row align-items-center mb-5">
@@ -126,7 +117,6 @@
         </div>
     </section>
 
-    <!-- Mission & Values Section -->
     <section class="py-5 bg-gradient">
         <div class="container">
             <div class="row text-center mb-5">
@@ -167,7 +157,6 @@
         </div>
     </section>
 
-    <!-- Team Section -->
     <section class="py-5 team-section">
         <div class="container">
             <div class="row text-center mb-5">
@@ -223,7 +212,6 @@
         </div>
     </section>
 
-    <!-- Awards & Recognition Section -->
     <section class="py-5 bg-gradient">
         <div class="container">
             <div class="row text-center mb-5">
@@ -239,7 +227,7 @@
                             <i class="fas fa-trophy"></i>
                         </div>
                         <h5>Best Local Bakery</h5>
-                        <p class="small text-muted">City Choice Awards 2023</p>
+                        <p class="small text-muted">City Choice Awards 2025</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 animate-fade-up animate-delay-200">
@@ -248,7 +236,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <h5>5-Star Rating</h5>
-                        <p class="small text-muted">Google Reviews 2023</p>
+                        <p class="small text-muted">Google Reviews 2025</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 animate-fade-up animate-delay-300">
@@ -257,7 +245,7 @@
                             <i class="fas fa-certificate"></i>
                         </div>
                         <h5>Organic Certified</h5>
-                        <p class="small text-muted">USDA Organic 2022</p>
+                        <p class="small text-muted">USDA Organic 2025</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 animate-fade-up animate-delay-400">
@@ -273,13 +261,12 @@
         </div>
     </section>
 
-    <!-- Contact Info Section -->
     <section class="py-5">
         <div class="container">
             <div class="row text-center mb-5">
                 <div class="col-12 animate-fade-up">
                     <h2 class="section-title">Visit Us Today</h2>
-                    <p class="section-subtitle">We'd love to welcome you to Sweet Delights</p>
+                    <p class="section-subtitle">We'd love to welcome you to Sips & Bites</p>
                 </div>
             </div>
             <div class="row g-4">
@@ -289,7 +276,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <h5>Location</h5>
-                        <p>123 Bakery Street<br>Sweet City, SC 12345</p>
+                        <p>123 Bakery Street<br>Sweet City</p>
                     </div>
                 </div>
                 <div class="col-lg-4 animate-fade-up animate-delay-200">
@@ -314,7 +301,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="row g-4">
@@ -391,11 +377,8 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- Auth JS -->
     <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
 
