--- a/home.html
+++ b/home.html
@@ -4,22 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sips & Bites - Home</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/home-animations.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="home.html">
@@ -62,7 +55,6 @@
         </div>
     </nav>
 
-    <!-- Hero Section with Swiper -->
     <section class="hero-section">
         <div class="swiper heroSwiper">
             <div class="swiper-wrapper">
@@ -163,58 +155,53 @@
         </div>
     </section>
 
-    <!-- Features Section -->
     <section class="features-section py-5">
         <div class="container">
             <div class="row text-center mb-5">
                 <div class="col-12 animate-fade-up">
-                    <h2 class="section-title">Why Choose Sweet Delights?</h2>
+                    <h2 class="section-title">Why Choose Sips & Bites?</h2>
                     <p class="section-subtitle">Experience the difference of artisanal quality and exceptional service</p>
                 </div>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 animate-fade-up animate-delay-100">
-                    <div class="feature-card">
-                        <div class="feature-icon">
+                    <div class="card h-100 feature-card shadow-sm border-0 p-4 text-center">
+                        <div class="feature-icon mx-auto mb-3 d-flex align-items-center justify-content-center rounded-circle">
                             <i class="fas fa-leaf"></i>
                         </div>
-                        <h4>Fresh Ingredients</h4>
-                        <p>We source only the finest, freshest ingredients from local farms and trusted suppliers</p>
+                        <h4 class="h5 mb-3">Fresh Ingredients</h4>
+                        <p class="text-muted mb-0">We source only the finest, freshest ingredients from local farms and trusted suppliers</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 animate-fade-up animate-delay-200">
-                    <div class="feature-card">
-                        <div class="feature-icon">
+                    <div class="card h-100 feature-card shadow-sm border-0 p-4 text-center">
+                        <div class="feature-icon mx-auto mb-3 d-flex align-items-center justify-content-center rounded-circle">
                             <i class="fas fa-clock"></i>
                         </div>
-                        <h4>Baked Daily</h4>
-                        <p>Everything is baked fresh daily in small batches to ensure maximum flavor and quality</p>
+                        <h4 class="h5 mb-3">Baked Daily</h4>
+                        <p class="text-muted mb-0">Everything is baked fresh daily in small batches to ensure maximum flavor and quality</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 animate-fade-up animate-delay-300">
-                    <div class="feature-card">
-                        <div class="feature-icon">
+                    <div class="card h-100 feature-card shadow-sm border-0 p-4 text-center">
+                        <div class="feature-icon mx-auto mb-3 d-flex align-items-center justify-content-center rounded-circle">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <h4>Fast Delivery</h4>
-                        <p>Quick and reliable delivery service to bring our delicious products right to your door</p>
+                        <h4 class="h5 mb-3">Fast Delivery</h4>
+                        <p class="text-muted mb-0">Quick and reliable delivery service to bring our delicious products right to your door</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Popular Products Section -->
     <section class="popular-products py-5">
         <div class="container">
             <div class="row text-center mb-5">
                 <div class="col-12 animate-fade-up">
                     <h2 class="section-title">Popular Products</h2>
-                    <p class="section-subtitle">Discover our customers' favorite items</p>
+                    <p class="section-subtitle">Discover our products</p>
                 </div>
-            </div>
-            <div class="row g-4" id="popularProducts">
-                <!-- Popular products will be loaded here -->
             </div>
             <div class="text-center mt-5 animate-fade-up">
                 <a href="products.html" class="btn btn-primary btn-lg">
@@ -225,7 +212,6 @@
         </div>
     </section>
 
-    <!-- Stats Section -->
     <section class="stats-section py-5">
         <div class="container">
             <div class="row g-4 text-center">
@@ -257,7 +243,6 @@
         </div>
     </section>
 
-    <!-- Newsletter Section -->
     <section class="newsletter-section py-5">
         <div class="container">
             <div class="row justify-content-center">
@@ -280,7 +265,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="row g-4">
@@ -357,11 +341,8 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- Main JS -->
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
 
