--- a/products.html
+++ b/products.html
@@ -4,22 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sips & Bites - Products</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/products-animations.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="home.html">
@@ -62,7 +55,6 @@
         </div>
     </nav>
 
-    <!-- Page Header -->
     <section class="page-header">
         <div class="container">
             <div class="row align-items-center">
@@ -79,20 +71,18 @@
         </div>
     </section>
 
-    <!-- Products Section -->
     <section class="products-section py-5">
         <div class="container">
-            <!-- Filter Bar -->
-            <div class="filter-bar mb-5 animate-fade-up">
-                <div class="row align-items-center">
+            <div class="card filter-bar mb-5 animate-fade-up p-4 shadow-sm border-0">
+                <div class="row align-items-center g-3">
                     <div class="col-lg-6">
-                        <div class="search-box">
-                            <i class="fas fa-search"></i>
-                            <input type="text" id="searchInput" placeholder="Search products..." class="form-control">
+                        <div class="search-box position-relative">
+                            <i class="fas fa-search position-absolute top-50 start-0 translate-middle-y ms-3 text-muted"></i>
+                            <input type="text" id="searchInput" placeholder="Search products..." class="form-control ps-5">
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="filter-controls">
+                        <div class="filter-controls d-flex gap-2">
                             <select id="categoryFilter" class="form-select">
                                 <option value="">All Categories</option>
                                 <option value="bread">Breads</option>
@@ -110,27 +100,24 @@
                 </div>
             </div>
             
-            <!-- Products Grid -->
             <div id="productsGrid" class="row g-4">
-                <!-- Products will be dynamically loaded here -->
+
             </div>
             
-            <!-- Empty State -->
-            <div id="emptyState" class="empty-state text-center py-5" style="display: none;">
-                <div class="empty-icon">
+            <div id="emptyState" class="text-center py-5" style="display: none;">
+                <div class="empty-icon display-1 text-muted mb-4">
                     <i class="fas fa-box-open"></i>
                 </div>
-                <h3>No products found</h3>
-                <p>Try adjusting your search or filter criteria, or add some products to get started!</p>
+                <h3 class="text-muted mb-3">No products found</h3>
+                <p class="text-muted mb-4">Try adjusting your search or filter criteria, or add some products to get started!</p>
                 <a href="add-product.html" class="btn btn-primary">
-                    <i class="fas fa-plus"></i>
+                    <i class="fas fa-plus me-2"></i>
                     Add Product
                 </a>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="row g-4">
@@ -207,11 +194,8 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- Products JS -->
     <script src="js/products.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/auth.js"></script>
